# cookbook-crewai-x-futureagi

./: README.md  cookbook.py  futureagi_integration.py  requirements.txt
research_assistant/: .gitignore  main.py  pyproject.toml
research_assistant/src/research_assistant/: crew.py
research_assistant/src/research_assistant/config/: agents.yaml  tasks.yaml
